--- a/app/Resources/views/pages/index.html.twig
+++ b/app/Resources/views/pages/index.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
-
+{% block title %}{{ 'homepageTitle'|trans }}{% endblock %}
 {% block body %}
 <div class="large-12 columns text-center">
-    <h1>Horaires et Tarifs</h1>
+    <h1>{{ 'schedulesPrices'|trans }}</h1>
     <h1>Alerte attentat - Vigipirate</h1>
     {% image 'images/jpg/louvre-logo-vigipirate-2017.jpg' %}
         <img src="{{ asset_url }}" alt="Example" />
@@ -69,6 +69,6 @@ En cas d’incident, il faut d’abord s’échapper de la zone de danger, alert
             </tr>
         </tbody>
     </table>
-    <a href="/step1" class="button">Réserver vos billets</a>
+    <a href="{{path('step1')}}" class="button">Réserver vos billets</a>
 </div>
 {% endblock %}
