--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -68,7 +68,7 @@
             <p>Contactez-nous - CGV -Aide/FAQ</p>
         </div>
         <div class="large-2 medium-2 small-12 columns text-center">       
-            <p><a href="#" class="button expanded">↑ Haut de page ↑</a></p>
+            <p><a href="#" id="scrollTop" class="button expanded">↑ Haut de page ↑</a></p>
         </div>
     </footer>
 </html>
