--- a/app/Resources/views/pages/step1.html.twig
+++ b/app/Resources/views/pages/step1.html.twig
@@ -6,13 +6,21 @@
   <div data-abide-error class="alert callout" style="display: none;">
     <p><i class="fi-alert"></i>{{'step1.formError'|trans}}</p>
   </div>
+  {% if (form_errors(form)) %}
+    <div class="alert callout">
+        {{ form_errors(form) }}
+    </div>
+  {% endif %}
 {{ form_widget(form) }}
   <div class="row">
-    <fieldset class="large-6 columns">
-      <button class="button" type="submit" value="Submit">Passer à l'étape suivante</button>
+    <fieldset class="large-4 small-12 columns">
+      <a href="/" class="button expanded">Retour à la page d'accueil</a>
     </fieldset>
-    <fieldset class="large-6 columns">
-      <button class="button" type="reset" value="Reset">Reset</button>
+    <fieldset class="large-4 small-12 columns">
+      <button class="button expanded" type="reset" value="Reset">Reset</button>
+    </fieldset>
+    <fieldset class="large-4 small-12 columns">
+      <button class="button expanded" type="submit" value="Submit">Passer à l'étape suivante</button>
     </fieldset>
   </div>
 {{ form_end(form) }}
