Service et manager revues

--- a/app/Resources/views/pages/step3.html.twig
+++ b/app/Resources/views/pages/step3.html.twig
@@ -45,7 +45,7 @@
 {{ form_widget(form) }}
   <div class="row">
     <fieldset class="large-4 small-12 columns">
-      <a href="/" class="button expanded">Retour à la page d'accueil</a>
+      <a href="{path('step2')}}" class="button expanded">Retour à l'étape précédente</a>
     </fieldset>
     <fieldset class="large-4 small-12 columns">
       <button class="button expanded" type="reset" value="Reset">Reset</button>
