--- a/app/Resources/views/pages/step3.html.twig
+++ b/app/Resources/views/pages/step3.html.twig
@@ -1,8 +1,7 @@
 {% extends 'base.html.twig' %}
-{% block title %}Réservation étape 2{% endblock %}
+{% block title %}Réservation étape 3{% endblock %}
 {% block body %}
 <h2>Étape 3 sur 3</h2>
-{#
 <table>
   <thead>
     <tr>
@@ -11,6 +10,7 @@
       <th>{{'step3.dateOfBirth'|trans}}</th>
       <th>{{'step3.reducedPrice'|trans}}</th>
       <th>{{'step3.price'|trans}}</th>
+      <th>{{'step3.delete'|trans}}</th>
     </tr>
   </thead>
   <tbody>
@@ -19,11 +19,23 @@
       <td>{{ ticket.firstname }}</td>
       <td>{{ ticket.lastname }}</td>
       <td>{{ ticket.dateOfBirth | date('m/d/Y') }}</td>
+      <td>{{ ticket.price }}</td>
       <td>{{ ticket.reducedPrice }}</td>
+      <td>
+      {%set onsubmit = "return confirm(\"#{'step3.deleteConfirmation'|trans}\");"%}
+        {{ form_start(formsArray[key], {'action': path('bill_deleteticket', {'id': key}), 'method': 'DELETE', 'attr':{'onsubmit':onsubmit}}) }}      
+        {{ form_widget(formsArray[key]) }}
+        {{ form_end(formsArray[key]) }}
+      </td>
     </tr>
   {% endfor %}
   </tbody>
 </table>
+
+  {% for key,form in formsArray %}
+  {% endfor %}
+  {{ form_start(form, {'action': path('command_confirmation'), 'method': 'POST'}) }}  
+    {{ form_widget(form) }}    
   <div class="row">
     <fieldset class="large-6 small-12 columns">
       <a href="{{path('step2')}}" class="button expanded">Retour à l'étape précédente</a>
@@ -32,27 +44,6 @@
       <button class="button expanded" type="submit" value="Submit">Confirmer la commande</button>
     </fieldset>
   </div>
-  #}
-  {{ form_start(form, { 'method': 'DELETE', 'attr':{ 'novalidate': 'novalidate', 'data-abide': null, 'class': 'text-center'}}) }}
-  <div data-abide-error class="alert callout" style="display: none;">
-    <p><i class="fi-alert"></i>{{'form.formError'|trans}}</p>
-  </div>
-  {% if (form_errors(form)) %}
-    <div class="alert callout">
-        {{ form_errors(form) }}
-    </div>
-  {% endif %}
-{{ form_widget(form) }}
-  <div class="row">
-    <fieldset class="large-4 small-12 columns">
-      <a href="{{path('step2')}}" class="button expanded">Retour à l'étape précédente</a>
-    </fieldset>
-    <fieldset class="large-4 small-12 columns">
-      <button class="button expanded" type="reset" value="Reset">Reset</button>
-    </fieldset>
-    <fieldset class="large-4 small-12 columns">
-      <button class="button expanded" type="submit" value="Submit">Passer à l'étape suivante</button>
-    </fieldset>
-  </div>
-{{ form_end(form) }}
+  {{ form_end(form) }}
+
 {% endblock %}
