--- a/app/Resources/views/pages/step2.html.twig
+++ b/app/Resources/views/pages/step2.html.twig
@@ -2,7 +2,7 @@
 {% block title %}Réservation étape 2{% endblock %}
 {% block body %}
 <h2>Étape 2 sur 3</h2>
-{{ form_start(form, { 'action': path('bill_addtickets'), 'method': 'POST', 'attr':{ 'novalidate': 'novalidate', 'data-abide': null, 'class': 'text-center'}}) }}
+{{ form_start(form, {'method': 'POST', 'attr':{ 'novalidate': 'novalidate', 'data-abide': null, 'class': 'text-center'}}) }}
   <div data-abide-error class="alert callout" style="display: none;">
     <p><i class="fi-alert"></i>{{'form.formError'|trans}}</p>
   </div>
