--- a/app/Resources/views/pages/step3.html.twig
+++ b/app/Resources/views/pages/step3.html.twig
@@ -1,39 +1,47 @@
 {% extends 'base.html.twig' %}
-{% block title %}Réservation étape 3{% endblock %}
+{% block title %}{{ 'step3.title'|trans }}{% endblock %}
 {% block body %}
-<h2>Étape 3 sur 3</h2>
-<table>
-  <thead>
-    <tr>
-      <th>{{'step3.firstname'|trans}}</th>
-      <th>{{'step3.lastname'|trans}}</th>
-      <th>{{'step3.dateOfBirth'|trans}}</th>
-      <th>{{'step3.reducedPrice'|trans}}</th>
-      <th>{{'step3.price'|trans}}</th>
-      <th>{{'step3.delete'|trans}}</th>
-    </tr>
-  </thead>
-  <tbody>
-  {% for key,ticket in Bill.tickets %}
-    <tr>
-      <td>{{ ticket.firstname }}</td>
-      <td>{{ ticket.lastname }}</td>
-      <td>{{ ticket.dateOfBirth | date('m/d/Y') }}</td>
-      <td>{{ ticket.reducedPrice }}</td>
-      <td>{{ ticket.price }} €</td>
-      
-      <td>
-  {% endfor %}
-  {% for key,ticketForm in formsArray %}
-      {%set onsubmit = "return confirm(\"#{'step3.deleteConfirmation'|trans}\");"%}
-        {{ form_start(ticketForm, {'action': path('bill_deleteticket', {'id': key}), 'method': 'DELETE', 'attr':{'onsubmit':onsubmit}}) }}      
-        {{ form_widget(ticketForm) }}
-        {{ form_end(ticketForm) }}
-      </td>
-    </tr>
-  {% endfor %}
-  </tbody>
-</table>
+<h2>{{ 'step3.stepNumber'|trans }}</h2>
+  <div class="row">
+    <table>
+      <thead>
+        <tr>
+          <th>{{'step3.firstname'|trans}}</th>
+          <th>{{'step3.lastname'|trans}}</th>
+          <th>{{'step3.dateOfBirth'|trans}}</th>
+          <th>{{'step3.reducedPrice'|trans}}</th>
+          <th>{{'step3.price'|trans}}</th>
+          <th>{{'step3.delete'|trans}}</th>
+        </tr>
+      </thead>
+      <tbody>
+      {% for key,ticket in Bill.tickets %}
+        <tr>
+          <td>{{ ticket.firstname }}</td>
+          <td>{{ ticket.lastname }}</td>
+          <td>{{ ticket.dateOfBirth | date('m/d/Y') }}</td>
+          <td>{{ ticket.priceType|trans }}</td>
+          <td>{{ ticket.price }}.00 €</td>
+
+          <td>
+          {%set onsubmit = "return confirm(\"#{'step3.deleteConfirmation'|trans}\");"%}
+            {{ form_start(formsArray[loop.index0], {'action': path('bill_deleteticket', {'id': key}), 'method': 'DELETE', 'attr':{'onsubmit':onsubmit}}) }}
+            {{ form_widget(formsArray[loop.index0]) }}
+            {{ form_end(formsArray[loop.index0]) }}
+          </td>
+        </tr>
+      {% endfor %}
+      </tbody>
+    </table>
+  </div>
+
+    <div class="row">
+      <h2 class="column menu-centered">{{ 'step3.totalPrice'|trans }}</h2>
+    </div>
+    <div class="row">
+      <h2 class="column menu-centered">{{ Bill.totalPrice }},00 €</h2>
+    </div>
+
   {{ form_start(form,{'method': 'POST'}) }}  
   {{ form_widget(form) }}    
   <div class="row">
