--- a/app/Resources/views/pages/thankyou.html.twig
+++ b/app/Resources/views/pages/thankyou.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
-{% block title %}Réservation étape 2{% endblock %}
+{% block title %}{{ 'thankyou.title'|trans }}{% endblock %}
 {% block body %}
-<h2>Merci pour votre confiance</h2>
+<h2>{{ 'thankyou.title'|trans }}</h2>
 
 {% endblock %}
