--- a/app/Resources/views/pages/step2.html.twig
+++ b/app/Resources/views/pages/step2.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
-{% block title %}Réservation étape 2{% endblock %}
+{% block title %}{{ 'step2.title'|trans }}{% endblock %}
 {% block body %}
-<h2>Étape 2 sur 3</h2>
+<h2>{{ 'step2.stepNumber'|trans }}</h2>
 {{ form_start(form, {'method': 'POST', 'attr':{ 'novalidate': 'novalidate', 'data-abide': null, 'class': 'text-center'}}) }}
   <div data-abide-error class="alert callout" style="display: none;">
     <p><i class="fi-alert"></i>{{'form.formError'|trans}}</p>
@@ -12,7 +12,7 @@
     </div>
   {% endif %}
   {% for key,ticket in form.tickets %}
-      <label>Billet {{key+1}}</label>
+      <label>{{ 'ticket'|trans }} {{key+1}}</label>
       {{ form_row(ticket.firstname) }}
       {{ form_row(ticket.lastname) }}
       {{ form_row(ticket.date_of_birth) }}
