--- a/app/Resources/views/pages/stripe.html.twig
+++ b/app/Resources/views/pages/stripe.html.twig
@@ -1,46 +1,7 @@
 {% extends 'base.html.twig' %}
-{% block title %}Réservation étape 3{% endblock %}
+{% block title %}{{ 'stripe.title'|trans }}{% endblock %}
 {% block body %}
-<h2>Étape 3 sur 3</h2>
-{#<form action="{{path('payment')}}" id="stripeForm" method="POST">
-  <div class="row">
-    <div class="large-6 columns">
-    <label for="">{{ 'stripe.creditCardNumber'|trans }}</label>
-      <input type="text" placeholder="{{ 'stripe.creditCardNumber'|trans }}" data-stripe="number" value="4242 4242 4242 4242">
-    </div>
-    <div class="large-3 columns">
-    <label for="">{{ 'stripe.expirationMonth'|trans }}</label>    
-      <select data-stripe="exp-month">
-      {% for m in 1..12 %}
-        <option value="0{{m}}">{{m}}</option>
-      {% endfor %}
-      </select>
-    </div>
-    <div class="large-3 columns">
-    <label for="">{{ 'stripe.expirationYear'|trans }}</label>    
-      <select data-stripe="exp-year">
-      {% set currentYear = 'now'|date("Y") %}
-      {% set maxYear = currentYear + 6 %}
-      {% for y in currentYear..maxYear %}
-        <option value={{y}} selected>{{y}}</option>
-      {% endfor %}
-      </select>
-    </div>
-    <div class="large-3 columns">
-      <label for="">{{ 'stripe.cvc'|trans }}</label>
-      <input type="text" placeholder="{{ 'stripe.cvc'|trans }}" data-stripe="cvc" value="123">
-    </div>
-  </div>
-  <div class="row">
-    <fieldset class="large-6 small-12 columns">
-      <a href="{{path('step3')}}" class="button expanded">Retour à l'étape précédente</a>
-    </fieldset>
-    <fieldset class="large-6 small-12 columns">
-      <button class="button expanded" type="submit" value="Submit" id="submitForm">Confirmer le paiement</button>
-    </fieldset>
-  </div>
-</form>
-#}
+<h2>{{ 'stripe.title'|trans }}</h2>
 {{ form_start(form, {'method': 'POST', 'attr':{ 'novalidate': 'novalidate', 'data-abide': null, 'class': 'text-center', 'id': 'stripeForm'}}) }}
   <div data-abide-error class="alert callout" style="display: none;">
     <p><i class="fi-alert"></i>{{'form.formError'|trans}}</p>
@@ -91,8 +52,7 @@
               $form.find('#submitForm').attr('disabled', false);
             }else{
               var token = response.id;
-              $('#credit_card_payment_stripe_token').val(token)
-              debugger
+              $('#credit_card_payment_stripe_token').val(token);
               $form.get(0).submit();
             }
           });
