--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -49,6 +49,7 @@
     {% block body %}{% endblock %}
     {% block javascripts %}
         {% javascripts  'js/vendor/jquery.js'
+                        'js/vendor/jquery.cookie.js'
                         'js/vendor/motionui.js'
                         'js/vendor/whatinput.js'
                         'js/vendor/modernizr.js'
