--- a/app/Resources/views/pages/thankyou.html.twig
+++ b/app/Resources/views/pages/thankyou.html.twig
@@ -1,7 +1,9 @@
 {% extends 'base.html.twig' %}
 {% block title %}{{ 'thankyou.title'|trans }}{% endblock %}
 {% block body %}
-<h2>{{ 'thankyou.title'|trans }}</h2>
+    <div class="row">
+        <h2>{{ 'thankyou.title'|trans }}</h2>
+    </div>
     <div class="row">
         <div class="columns text-center">
             {{ 'thankyou.billStripeId'|trans }} <strong>{{ Bill.stripeId }}</strong>
@@ -37,8 +39,18 @@
         <h2 class="column menu-centered">{{ Bill.totalPrice }},00 €</h2>
     </div>
     <div class="row">
-        {% image 'images/Pages/pdf.svg' %}
-        <img width="20px" height="20px" src="{{ asset_url }}" alt="Example" />
-        {% endimage %}
+        <div class="large-4 columns text-center">
+            {% image 'images/Pages/printer.svg' %}
+            <a href="{{ path('billPrint') }}"><img width="60px" src="{{ asset_url }}" alt="Print" /></a>
+            {% endimage %}
+        </div>
+        <div class="large-4 columns text-center">
+            <a href="{{ path('step1') }}" class="button expanded">{{ 'thankyou.newBill'|trans }}</a>
+        </div>
+            <div class="large-4 columns text-center">
+            {% image 'images/Pages/pdf.svg' %}
+                <a href="{{ path('billPDF') }}"><img width="60px" src="{{ asset_url }}" alt="Download to PDF" /></a>
+            {% endimage %}
+        </div>
     </div>
 {% endblock %}
