All command process allright

--- a/app/Resources/views/email/bill.html.twig
+++ b/app/Resources/views/email/bill.html.twig
@@ -27,7 +27,7 @@
         <tr>
             <td>{{ ticket.firstname }}</td>
             <td>{{ ticket.lastname }}</td>
-            <td>{{ ticket.dateOfBirth | date('m/d/Y') }}</td>
+            <td>{{ ticket.dateOfBirth }}</td>
             <td>{{ ticket.priceType|trans }}</td>
             <td>{{ ticket.price }}.00 €</td>
         </tr>
