--- a/app/Resources/views/pages/thankyou.html.twig
+++ b/app/Resources/views/pages/thankyou.html.twig
@@ -5,8 +5,11 @@
         <h2>{{ 'thankyou.title'|trans }}</h2>
     </div>
     <div class="row">
-        <div class="columns text-center">
-            {{ 'thankyou.billStripeId'|trans }} <strong>{{ Bill.stripeId }}</strong>
+        <div class="large-12 columns text-center">
+            {{ 'thankyou.billStripeId'|trans }} <strong>{{ Bill.orderId }}</strong>
+        </div>
+        <div class="large-12 columns text-center">
+            {{ 'step3.orderDateOfBooking'|trans }} <strong>{{ Bill.getDateOfBookingObject | date('m/d/Y')}}</strong>
         </div>
         <table>
             <thead>
@@ -23,7 +26,7 @@
                 <tr>
                     <td>{{ ticket.firstname }}</td>
                     <td>{{ ticket.lastname }}</td>
-                    <td>{{ ticket.dateOfBirth | date('m/d/Y') }}</td>
+                    <td>{{ ticket.dateOfBirth}}</td>
                     <td>{{ ticket.priceType|trans }}</td>
                     <td>{{ ticket.price }}.00 €</td>
                 </tr>
