Before testing dompdf

--- a/app/Resources/views/pages/step3.html.twig
+++ b/app/Resources/views/pages/step3.html.twig
@@ -7,7 +7,7 @@
   <div class="row">
     <div class="columns text-center">
       {{ 'step3.orderDateOfBooking'|trans }} <strong>{{ Bill.getDateOfBookingObject | date('m/d/Y')}}</strong>
-    </div>
+    </div></br>
     <table>
       <thead>
         <tr>
