--- a/app/Resources/views/pages/thankyou.html.twig
+++ b/app/Resources/views/pages/thankyou.html.twig
@@ -11,6 +11,8 @@
         <div class="large-12 columns text-center">
             {{ 'step3.orderDateOfBooking'|trans }} <strong>{{ Bill.getDateOfBookingObject | date('m/d/Y')}}</strong>
         </div>
+    </div></br>
+    <div class="row">
         <table>
             <thead>
             <tr>
@@ -44,7 +46,7 @@
     <div class="row">
         <div class="large-4 columns text-center">
             {% image 'images/Pages/printer.svg' %}
-            <a href="{{ path('billPrint') }}"><img width="60px" src="{{ asset_url }}" alt="Print" /></a>
+            <a class="nonPrintable" onclick="window.print()"><img width="60px" src="{{ asset_url }}" alt="Print" /></a>
             {% endimage %}
         </div>
         <div class="large-4 columns text-center">
@@ -52,7 +54,7 @@
         </div>
             <div class="large-4 columns text-center">
             {% image 'images/Pages/pdf.svg' %}
-                <a href="{{ path('billPDF') }}"><img width="60px" src="{{ asset_url }}" alt="Download to PDF" /></a>
+                <a class="nonPrintable" href="{{ path('billPDF') }}"><img width="60px" src="{{ asset_url }}" alt="Download to PDF" /></a>
             {% endimage %}
         </div>
     </div>
